use playlists rather than full album videos, header fixed at top and collapse info by default
lazy load

undo lazy load tmp

simple lazy loading attmpt

best lazy load?

update with more allow

untested pause

--- a/style.css
+++ b/style.css
@@ -42,6 +42,15 @@ h3 {
 
 }
 
+nav {
+  position: fixed;
+  text-align: right;
+  padding-right: 20px;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
+
 nav ul {
   list-style: none;
   margin: 0;
@@ -54,7 +63,7 @@ nav ul li {
 
 nav ul li a {
   display: block;
-  padding: 10px;
+  padding: 5px;
   color: #fff;
   text-decoration: none;
 }
@@ -63,6 +72,10 @@ nav ul li a:hover {
   background-color: #666;
 }
 
+button {
+  color: #fff;
+  background-color: #666;
+}
 
 .video-container {
   position: relative;
